# gnome-example-search-provider

./: .gitignore  README  autogen.sh  configure.ac
src/: Makefile.am  gnome-search-example.c  gnome-search-example.desktop.in.in  org.gnome.SearchExample.SearchProvider.service.in  search-example-provider.ini
